--- a/style.css
+++ b/style.css
@@ -162,3 +162,18 @@ body {
     align-items: center;
     margin: 5% 0%;
 }
+
+.footer_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #FF8383;
+    font-family: var(--fuente);
+    font-size: 1.35rem;
+    font-weight: 500;
+    margin: 1%;
+    padding: 0.75%;
+    border: 2px solid #000000;
+    border-radius: 16px;
+}
