UPDATE style.css | footer

--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #FF8383;
+    background-color: #FFD95F;
     font-family: var(--fuente);
     font-size: 1.35rem;
     font-weight: 500;
